# recipes

./: .gitignore  .pylintrc  MANIFEST.in  README.md  __init__.py  array.py  base.py  base_test.py  decor.py  dict.py  expose.py  iter.py  list.py  logging.py  mcmc.py  memoize.py  memoizer_test.py  meta.py  misc.py  misc.py.py  oop.py  path  pprint.py  profile.py  progressbar.py  pyproject.toml  regex.py  requirements-dev.txt  requirements.txt  set.py  setup.cfg  setup.py  special.py  string.py  table.py  test.py  utils.py
array/: __init__.py  fold.py  misc.py  neighbours.py
dev/: decor.py  profile.py
expose.future/: __init__.py  utils.py
introspection/: comments.py  imports.py  tidy_imports  tidy_imports.py  utils.py
io/: __init__.py  comms.py  parse.py  tracewarn.py  utils.py
language/: unicode.py
oo/: meta.py
parallel/: consumers.py  pool.py  synced.py  synched.py  utils.py
pprint/: __init__.py  misc.py  pprint.py  progressbar.py
profile/: __init__.py  atexit_test.py  imports.py  printers.py  tests.py  timers.py
recipes/: bash.py  dict.py  dicts.py  docstring.py  functionals.py  interactive.py  iter.py  list.py  lists.py  logging.py  memoize.py  misc.py  op.py  property.py  regex.py  sets.py  string.py  testing.py
src/: interactive.py  property.py
tests/: test_array.py  test_bash.py  test_brackets.py  test_caches.py  test_containers.py  test_dicts.py  test_functionals.py  test_io.py  test_iter.py  test_lists.py  test_null.py  test_oo.py  test_op.py  test_parallel.py  test_partial.py  test_regex.py  test_sets.py  test_string.py  test_synonyms.py  (+2 more)
(+284 files in other folders)
