[metadata]
name = recipes
author = Hannes Breytenbach
author_email = hannes@saao.ac.za
description = A cookbook for the python developer connoisseur
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/astromancer/recipes
project_urls =
    Bug Tracker = https://github.com/astromancer/recipes/issues
classifiers = 
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm


[options.packages.find]
where = src